2005-06-04  Per Bothner  <per@bothner.com>

	* XQuery.java: Update for AbstractFormat move to gnu.lists.

	* XQuery.java (getFormat): Change return type.

2005-05-27  Per Bothner  <per@bothner.com>

	* XQuery.java (evalToFocusProc): Also set PARSE_IMMEDIATE flag.

2005-05-18  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (lookup): Use new getLangEnvironment method.

2005-05-17  Per Bothner  <per@bothner.com>

	* XQuery.java (evalToFocusProc): Pass current Environment, rather than
	language Environment, to evalModule.

2005-03-16  Per Bothner  <per@bothner.com>

	* XQParser.java: Now extends Lexer rather than LispReader.
	(getReadTable): Remove unused method.
	(xqlReadTable): Remove unused field.

2005-03-07  Per Bothner  <per@bothner.com>

	* XQParser.java: Update Interpreter -> Language:
	* XQResolveNames.java: Likewise.

2005-03-03  Per Bothner  <per@bothner.com>

	* XQuery.java: Function 'children' has been moved.

2005-02-12  Per Bothner  <per@bothner.com>

	* XQuery.java: Use different SetExp constructor,
	to avoid setting the 'binding' field, which will become private.
	* XQResolveNames.java: Use SetExp's setBinding method.

2005-01-25  Per Bothner  <per@bothner.com>

	* XQuery.java (registerEnvironment): Update Interpreter -> Language.

	* XQuery.java: Put gnu.kawa.slib.HTTP function in qexo namespace.

2005-01-22  Per Bothner  <per@bothner.com>

	* XQuery.java: Inherit from Language instead of Interpreter.

	* XQuery.java (<init>): Declare functions from gnu.kawa.slib.HTTP.

	* XQParser.java (parseMaybePrimaryExpr): Fix column number handling.

2004-12-27  Per Bothner  <per@bothner.com>

	* XQParser.java (parseFunctionDefinition): Use new isStatic method.

2004-12-22  Per Bothner  <per@bothner.com>

	* XQParser.java (prologNamespaces): New field.
	(pushNamespace): Add to prologNamespaces.
	(parseNameSpec): Simplify, thanks to use of new SName type.
	(castQName): New helper method.