@@ -1,3 +1,15 @@
+2005-06-26  Per Bothner  <per@bothner.com>
+
+	* XQParser.java (priority): Use a switch statement instead of a shift.
+	Also fix some errors in the precedence hierarchy, compared to the
+	current draft.
+	(OP_OR...OP_INSTANCEOF): Re-order to be plain sequential.
+	(OP_IDIV): New operator.
+	(peekOperator): Use switch statement for presuambly better performance.
+	Map 'idiv' to OP_IDIV.
+	(makeBinary): Handle OP_IDIV.
+	(parseBinaryExpr): Remove now-bogus test.
+
 2005-06-04  Per Bothner  <per@bothner.com>
 
 	* XQuery.java: Update for AbstractFormat move to gnu.lists.
